--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     <div data-winning-message-text></div>
     <button id="restartButton">Restart</button>
   </div>
+  <footer class="footer">
+    <p>Copyright &#169;	Artan Merko </p>
+</footer>
 </body>
 </html>
